# BiProxy

./: .gitmodules  CMakeLists.txt  README.md  motd.json
include/: Proxy.h
include/data/: JavaPing.h  Player.h  Server.h
include/net/: AbstractSocket.h  BedrockClientHandler.h  JavaPacketHandler.h  JavaServerPacketHandler.h  RakNetPacketHandler.h  UnixSock.h  UnixSockTCP.h  UnixSockUDP.h  WinSock.h  WinSockTCP.h  WinSockUDP.h
include/net/protocol/: ClientLogin.h  ClientPlay.h  ClientStatus.h  Handshake.h  Protocol.h  ServerLogin.h  ServerPlay.h
include/packets/: CompressionPacket.h  HandshakePacket.h  Packet.h
include/utils/: Base64.h  ByteBuffer.h  ByteBuffer.inl  Encryption.h  Utils.h
src/: Proxy.cpp  main.cpp
src/data/: JavaPing.cpp  Player.cpp  Server.cpp
src/net/: BedrockClientHandler.cpp  JavaPacketHandler.cpp  JavaServerPacketHandler.cpp  RakNetPacketHandler.cpp  UnixSock.cpp  UnixSockTCP.cpp  UnixSockUDP.cpp  WinSock.cpp  WinSockTCP.cpp  WinSockUDP.cpp
src/net/protocol/: ClientLogin.cpp  ClientPlay.cpp  ClientStatus.cpp  Handshake.cpp  Protocol.cpp  ServerLogin.cpp  ServerPlay.cpp
src/packets/: Packet.cpp
src/utils/: Base64.cpp  ByteBuffer.cpp  Encryption.cpp  Utils.cpp
